# AutoMaid

./: .gitignore  MANIFEST.in  README.md  api.py  cli.py  client.py  config.example.json  config.json  conversation_logger.py  memory_protocol.py  pyproject.toml  requirements.txt  setup.py
agenticmaid/: __init__.py  client.py  config_manager.py  mcp_stdio_adapter.py  simple_memory.py
agenticmaid/external_modules/: __init__.py
agenticmaid/external_modules/solana_swap_monitor/: __init__.py  config_schema.py
agenticmaid/external_modules/telegram_bot_client/: telegram_bot_client.py
agenticmaid/messaging_system/clients/: base_client.py
agenticmaid/messaging_system/core/: __init__.py  exceptions.py  message.py
agenticmaid/messaging_system/tests/: __init__.py
agenticmaid/messaging_system/tests/test_clients/: __init__.py  test_base_client.py
examples/: direct_invocation_example.py
